# jadeplusplus

./: CMakeLists.txt  CMakeSettings.json  jade.xsd  vcpkg-configuration.json  vcpkg.json
src/: build_config.hpp  colors.cpp  colors.hpp  exceptions.hpp  logger.hpp  main.cpp  main.hpp  paths.cpp  paths.hpp  resource.cpp  resource.hpp
src/builders/: block_builder.cpp  block_builder.hpp  builder.cpp  builder.hpp  bundler.cpp  bundler.hpp  js_builder.cpp  js_builder.hpp  manifest_builder.cpp  manifest_builder.hpp  parallel_builder.cpp  parallel_builder.hpp
